Cart overlap fix + new files
New files:
- Widgets export file updated
- package-lock.json
- package.json updated to get rid of possible vulnerability issues stated by github

--- a/waikiki/style.css
+++ b/waikiki/style.css
@@ -4500,7 +4500,6 @@ body.woocommerce-checkout .site-container .site-header {
 .site-header .wrap .icon-nav .mini-cart .cart-dropdown {
     border-left: 1px solid #eaeaea;
     height: 100%;
-    height: 100vh;
     position: fixed;
     top: 0;
     z-index: 9999;
@@ -4522,7 +4521,7 @@ body.woocommerce-checkout .site-container .site-header {
     top:0;
 }
 .cart-hidden {
-  right: -100% !important;
+  right: -120% !important;
   transition: ease-out .3s;
 }
 .cart-active {
